// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`director-statement client ast: ast 1`] = `
Object {
  "body": Array [
    Object {
      "key": "quorum",
      "value": "20%",
    },
    Object {
      "attributes": Array [
        Object {
          "key": "weight",
          "value": "1",
        },
      ],
      "backend": "F_origin_0",
    },
    Object {
      "attributes": Array [
        Object {
          "key": "weight",
          "value": "1",
        },
      ],
      "backend": "F_origin_1",
    },
    Object {
      "attributes": Array [
        Object {
          "key": "weight",
          "value": "1",
        },
      ],
      "backend": "F_origin_2",
    },
  ],
  "directorType": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 30,
        "line": 2,
        "offset": 30,
      },
      "start": Object {
        "column": 25,
        "line": 2,
        "offset": 25,
      },
    },
    "name": "client",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "id": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 23,
        "line": 2,
        "offset": 23,
      },
      "start": Object {
        "column": 10,
        "line": 2,
        "offset": 10,
      },
    },
    "name": "the_client_dir",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 7,
      "offset": 163,
    },
    "start": Object {
      "column": 1,
      "line": 2,
      "offset": 1,
    },
  },
  "trailingComments": Array [],
  "type": "DirectorStatement",
}
`;

exports[`director-statement client format: format 1`] = `
director the_client_dir client {
  .quorum = 20%;
  { .backend = F_origin_0; .weight = 1; }
  { .backend = F_origin_1; .weight = 1; }
  { .backend = F_origin_2; .weight = 1; }
}
`;

exports[`director-statement client token 1`] = `
Array [
  director,
  the_client_dir,
  client,
  {,
  .,
  quorum,
  =,
  20%,
  ;,
  {,
  .,
  backend,
  =,
  F_origin_0,
  ;,
  .,
  weight,
  =,
  1,
  ;,
  },
  {,
  .,
  backend,
  =,
  F_origin_1,
  ;,
  .,
  weight,
  =,
  1,
  ;,
  },
  {,
  .,
  backend,
  =,
  F_origin_2,
  ;,
  .,
  weight,
  =,
  1,
  ;,
  },
  },
  sub,
  vcl_recv,
  {,
  set,
  client,
  .,
  identity,
  =,
  req,
  .,
  http,
  .,
  cookie,
  :,
  user_id,
  ;,
  # Or omit this line to use \`client.ip\`,
  set,
  req,
  .,
  backend,
  =,
  the_client_dir,
  ;,
  #FASTLY recv,
  },
]
`;

exports[`director-statement consistent-hashing ast: ast 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Array [
        Object {
          "key": "id",
          "value": "\\"s1\\"",
        },
      ],
      "backend": "s1",
    },
    Object {
      "attributes": Array [
        Object {
          "key": "id",
          "value": "\\"s2\\"",
        },
      ],
      "backend": "s2",
    },
    Object {
      "attributes": Array [
        Object {
          "key": "id",
          "value": "\\"s3\\"",
        },
      ],
      "backend": "s3",
    },
  ],
  "directorType": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 2,
        "offset": 28,
      },
      "start": Object {
        "column": 24,
        "line": 2,
        "offset": 24,
      },
    },
    "name": "chash",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "id": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 2,
        "offset": 22,
      },
      "start": Object {
        "column": 10,
        "line": 2,
        "offset": 10,
      },
    },
    "name": "the_chash_dir",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 6,
      "offset": 131,
    },
    "start": Object {
      "column": 1,
      "line": 2,
      "offset": 1,
    },
  },
  "trailingComments": Array [],
  "type": "DirectorStatement",
}
`;

exports[`director-statement consistent-hashing format: format 1`] = `
director the_chash_dir chash {
  { .backend = s1; .id = "s1"; }
  { .backend = s2; .id = "s2"; }
  { .backend = s3; .id = "s3"; }
}
`;

exports[`director-statement consistent-hashing token 1`] = `
Array [
  director,
  the_chash_dir,
  chash,
  {,
  {,
  .,
  backend,
  =,
  s1,
  ;,
  .,
  id,
  =,
  "s1",
  ;,
  },
  {,
  .,
  backend,
  =,
  s2,
  ;,
  .,
  id,
  =,
  "s2",
  ;,
  },
  {,
  .,
  backend,
  =,
  s3,
  ;,
  .,
  id,
  =,
  "s3",
  ;,
  },
  },
]
`;

exports[`director-statement content ast: ast 1`] = `
Object {
  "body": Array [
    Object {
      "key": "quorum",
      "value": "20%",
    },
    Object {
      "attributes": Array [
        Object {
          "key": "weight",
          "value": "1",
        },
      ],
      "backend": "F_origin_0",
    },
    Object {
      "attributes": Array [
        Object {
          "key": "weight",
          "value": "1",
        },
      ],
      "backend": "F_origin_1",
    },
    Object {
      "attributes": Array [
        Object {
          "key": "weight",
          "value": "1",
        },
      ],
      "backend": "F_origin_2",
    },
  ],
  "directorType": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 2,
        "offset": 26,
      },
      "start": Object {
        "column": 23,
        "line": 2,
        "offset": 23,
      },
    },
    "name": "hash",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "id": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 2,
        "offset": 21,
      },
      "start": Object {
        "column": 10,
        "line": 2,
        "offset": 10,
      },
    },
    "name": "the_hash_dir",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 7,
      "offset": 159,
    },
    "start": Object {
      "column": 1,
      "line": 2,
      "offset": 1,
    },
  },
  "trailingComments": Array [],
  "type": "DirectorStatement",
}
`;

exports[`director-statement content format: format 1`] = `
director the_hash_dir hash {
  .quorum = 20%;
  { .backend = F_origin_0; .weight = 1; }
  { .backend = F_origin_1; .weight = 1; }
  { .backend = F_origin_2; .weight = 1; }
}
`;

exports[`director-statement content token 1`] = `
Array [
  director,
  the_hash_dir,
  hash,
  {,
  .,
  quorum,
  =,
  20%,
  ;,
  {,
  .,
  backend,
  =,
  F_origin_0,
  ;,
  .,
  weight,
  =,
  1,
  ;,
  },
  {,
  .,
  backend,
  =,
  F_origin_1,
  ;,
  .,
  weight,
  =,
  1,
  ;,
  },
  {,
  .,
  backend,
  =,
  F_origin_2,
  ;,
  .,
  weight,
  =,
  1,
  ;,
  },
  },
]
`;

exports[`director-statement fallback ast: ast 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Array [],
      "backend": "F_backend1",
    },
    Object {
      "attributes": Array [],
      "backend": "F_backend2",
    },
    Object {
      "attributes": Array [],
      "backend": "F_backend3",
    },
  ],
  "directorType": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 24,
        "line": 2,
        "offset": 24,
      },
      "start": Object {
        "column": 17,
        "line": 2,
        "offset": 17,
      },
    },
    "name": "fallback",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "id": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 2,
        "offset": 15,
      },
      "start": Object {
        "column": 10,
        "line": 2,
        "offset": 10,
      },
    },
    "name": "my_dir",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 6,
      "offset": 115,
    },
    "start": Object {
      "column": 1,
      "line": 2,
      "offset": 1,
    },
  },
  "trailingComments": Array [],
  "type": "DirectorStatement",
}
`;

exports[`director-statement fallback format: format 1`] = `
director my_dir fallback {
  { .backend = F_backend1; }
  { .backend = F_backend2; }
  { .backend = F_backend3; }
}
`;

exports[`director-statement fallback token 1`] = `
Array [
  director,
  my_dir,
  fallback,
  {,
  {,
  .,
  backend,
  =,
  F_backend1,
  ;,
  },
  {,
  .,
  backend,
  =,
  F_backend2,
  ;,
  },
  {,
  .,
  backend,
  =,
  F_backend3,
  ;,
  },
  },
]
`;

exports[`director-statement random ast: ast 1`] = `
Object {
  "body": Array [
    Object {
      "key": "quorum",
      "value": "50%",
    },
    Object {
      "key": "retries",
      "value": "3",
    },
    Object {
      "attributes": Array [
        Object {
          "key": "weight",
          "value": "2",
        },
      ],
      "backend": "F_backend1",
    },
    Object {
      "attributes": Array [
        Object {
          "key": "weight",
          "value": "1",
        },
      ],
      "backend": "F_backend2",
    },
    Object {
      "attributes": Array [
        Object {
          "key": "weight",
          "value": "1",
        },
      ],
      "backend": "F_backend3",
    },
  ],
  "directorType": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 2,
        "offset": 22,
      },
      "start": Object {
        "column": 17,
        "line": 2,
        "offset": 17,
      },
    },
    "name": "random",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "id": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 2,
        "offset": 15,
      },
      "start": Object {
        "column": 10,
        "line": 2,
        "offset": 10,
      },
    },
    "name": "my_dir",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 8,
      "offset": 195,
    },
    "start": Object {
      "column": 1,
      "line": 2,
      "offset": 1,
    },
  },
  "trailingComments": Array [],
  "type": "DirectorStatement",
}
`;

exports[`director-statement random format: format 1`] = `
director my_dir random {
  .quorum = 50%;
  .retries = 3;
  { .backend = F_backend1; .weight = 2; }
  { .backend = F_backend2; .weight = 1; }
  { .backend = F_backend3; .weight = 1; }
}
`;

exports[`director-statement random token 1`] = `
Array [
  director,
  my_dir,
  random,
  {,
  .,
  quorum,
  =,
  50%,
  ;,
  .,
  retries,
  =,
  3,
  ;,
  {,
  .,
  backend,
  =,
  F_backend1,
  ;,
  .,
  weight,
  =,
  2,
  ;,
  },
  {,
  .,
  backend,
  =,
  F_backend2,
  ;,
  .,
  weight,
  =,
  1,
  ;,
  },
  {,
  .,
  backend,
  =,
  F_backend3,
  ;,
  .,
  weight,
  =,
  1,
  ;,
  },
  },
]
`;
